# adapter-os

./: .editorconfig  .env.example  .env.production  .env.reference  .envrc.example  .gitattributes  .gitignore  .incomplete-feature-manifest.json  .kilocodemodes  .mcp.json  .vercelignore  ABSTAIN_DETECTION_IMPLEMENTATION.md  ABSTAIN_FLOW.md  ACTIVATION_FUNCTIONS_IMPLEMENTATION.md  ADAPTER_METADATA_QUICK_REFERENCE.md  ADAPTER_STACK_FILTERING_TESTS.md  AGENTS.md  AGENT_10_DELIVERABLES.md  AGENT_12_DELIVERABLES.md  AGENT_21_ANALYSIS_MANIFEST.txt  AGENT_21_DELIVERABLES_INDEX.md  AGENT_21_README.md  AGENT_22_DELIVERABLES.txt  AGENT_23_VALIDATION_SCHEMAS.md  AGENT_6_DELIVERABLES.md  AI_SLOP_CLEANUP_IMPLEMENTATION.md  AI_SLOP_MONITORING_SYSTEM.md  AI_SLOP_QUALITY_CRITERIA.md  AI_SLOP_SAMPLING_STRATEGY.md  ANALYSIS_TEMPLATE_BACKEND_DECISION.md  AOS_FUTURE_FEATURES.md  AOS_ISOLATION_AUDIT.md  AOS_QUICK_START.md  API_DESIGN_ASSESSMENT.md  ARCHITECTURE.md  AUDIT_LOG.md  AUDIT_LOG.sha256  AUDIT_UNFINISHED_FEATURES.md  AUDIT_aos_worker_split.md  AUTH_FIXES_CHECKLIST.md  (+360 more)
crates/adapteros-agent-spawn/: Cargo.toml
crates/adapteros-agent-spawn/src/: agent.rs  config.rs  error.rs  lib.rs  orchestrator.rs  result_merger.rs  supervisor.rs  task_router.rs
crates/adapteros-aos/: CHANGELOG_VALIDATE.md  Cargo.toml  DELIVERABLES_TEST_UTILS.md  PARSER_IMPLEMENTATION.md  PERFORMANCE.md  README.md  README_VALIDATE.md  TEST_UTILS_README.md
crates/adapteros-aos/benches/: README.md  aos_benchmarks.rs  load_benchmark.rs
crates/adapteros-aos/examples/: memory_profile.rs  parse_aos_v2.rs  test_data_generation.rs
crates/adapteros-aos/src/: aos2_implementation.rs  aos2_writer.rs  aos_v2_parser.rs  cache.rs  format_validator.rs  hot_swap.rs  implementation.rs  lib.rs  manager.rs  metrics.rs  mmap_loader.rs  sealed.rs  types.rs  writer.rs
crates/adapteros-aos/tests/: AOS_LOADER_INTEGRATION_TESTS.md  DELIVERABLES.md  QUICK_START.md  README.md  TEST_SUITE_README.md  aos_format_corruption_tests.rs  aos_hash_edge_cases_tests.rs  aos_io_failure_tests.rs  aos_loader_integration_test.rs  aos_overflow_tests.rs  aos_serialization_tests.rs  aos_v2_parser_tests.rs  aos_version_compatibility_tests.rs  fixture_generator.rs  fixtures_tests.rs  integration_tests.rs  python_test_conversions.rs  telemetry_tests.rs  test_utils_integration.rs
crates/adapteros-api/: Cargo.toml
crates/adapteros-api-types/: Cargo.toml
crates/adapteros-api-types/src/: CLAUDE.md  activity.rs  adapters.rs  admin.rs  api_keys.rs  auth.rs  code_repositories.rs  codebase_adapters.rs  dashboard.rs  dataset_domain.rs  defaults.rs  diagnostics.rs  domain_adapters.rs  embeddings.rs  errors.rs  execution_policy.rs  export.rs  failure_code.rs  filesystem.rs  git.rs  inference.rs  knowledge.rs  lib.rs  metrics.rs  model_status.rs  models.rs  nodes.rs  openai.rs  orchestration.rs  packages.rs  plans.rs  policy.rs  prefix_templates.rs  provenance.rs  replay_proof.rs  repositories.rs  response_diff.rs  review.rs  routing.rs  run_envelope.rs  (+13 more)
crates/adapteros-api-types/tests/: failure_code_tests.rs  post_actions_test.rs
crates/adapteros-api/src/: lib.rs  middleware.rs  streaming.rs  types.rs  uds.rs
crates/adapteros-api/tests/: streaming_tests.rs
crates/adapteros-artifacts/: Cargo.toml
crates/adapteros-artifacts/src/: bundle.rs  cas.rs  lib.rs  replication.rs  sbom.rs  secd_client.rs  secureenclave.rs
crates/adapteros-artifacts/tests/: bundle_format_tests.rs
crates/adapteros-auth/: Cargo.toml
crates/adapteros-auth/src/: config.rs  context.rs  error.rs  lib.rs  mode.rs  public_paths.rs  state.rs
crates/adapteros-autograd/: Cargo.toml
crates/adapteros-autograd/src/: gradients.rs  lib.rs  loss.rs  operations.rs  tensor.rs
crates/adapteros-base-llm/: Cargo.toml
crates/adapteros-base-llm/examples/: mlx_ffi.rs
crates/adapteros-base-llm/src/: error.rs  lib.rs  metadata.rs  mlx_ffi.rs  qwen.rs  qwen_int4_mlx.rs
crates/adapteros-boot/: Cargo.toml
crates/adapteros-boot/src/: boot_report.rs  error.rs  evidence.rs  invariant_metrics.rs  jti_cache.rs  key_ring.rs  key_update.rs  lib.rs  lifecycle_builder.rs  phase.rs  runtime_dir.rs  services.rs  worker_auth.rs
crates/adapteros-cdp/: Cargo.toml
crates/adapteros-cdp/src/: lib.rs
crates/adapteros-chat/: Cargo.toml
crates/adapteros-chat/src/: lib.rs
crates/adapteros-cli/: Cargo.toml
crates/adapteros-cli/.sqlx/: query-c0c712371e2396d46cad66012b05b8f2142f9380d7beecf377777b7a200e9b9c.json
crates/adapteros-cli/docs/: aosctl_manual.md
crates/adapteros-cli/src/: app.rs  auth_store.rs  cli.rs  cli_telemetry.rs  (+13 more)
crates/adapteros-client/: Cargo.toml  build.rs
crates/adapteros-codegraph/: Cargo.toml
crates/adapteros-concurrent-fs/: Cargo.toml
crates/adapteros-config/: Cargo.toml
crates/adapteros-config-types/: Cargo.toml
crates/adapteros-core/: Cargo.toml  build.rs
crates/adapteros-cp-client/: Cargo.toml
crates/adapteros-crypto/: .adapteros-keys.enc  CLAUDE.md  Cargo.toml  KMS_TESTING_GUIDE.md
crates/adapteros-db/: CLAUDE.md  Cargo.toml  UPDATE_QUERIES_VERIFICATION.md  build.rs
crates/adapteros-deterministic-exec/: Cargo.toml  README.md
crates/adapteros-diagnostics/: Cargo.toml  README.md
crates/adapteros-domain/: Cargo.toml
crates/adapteros-e2e/: Cargo.toml
crates/adapteros-embeddings/: Cargo.toml
fuzz/: COMPILATION_NOTE.md  Cargo.toml  NEW_TARGETS.md
fuzz/fuzz_targets/: adapter_name_parse.rs  evidence_chain_verification.rs  evidence_envelope.rs  kv_quota_reservation.rs  manifest_parse.rs  model_cache_eviction.rs  policy_parse.rs  receipt_parsing.rs  receipt_verification.rs  router_input.rs  router_inputs.rs  router_route_with_adapter_info.rs  sbom_parse.rs  stack_name_parse.rs  stop_controller.rs  trace_encoding.rs
jkca-trainer/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: check_all.rs  check_cache.rs  code2db_dataset.rs  codegen.rs  convert_mlx_adapter.rs  determinism_report.rs  main.rs  openapi_coverage.rs  openapi_docs.rs  pack_lora.rs  sbom.rs  test_orchestrator.rs  train_base_adapter.rs  verify_adapters.rs  verify_agents.rs  verify_artifacts.rs
(+15182 files in other folders)
