[workspace]
members = [
    "crates/adapteros-*"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["rogu3bear <vats-springs0m@icloud.com>"]
edition = "2021"  # Inherited by members for consistency
license = "MIT OR Apache-2.0"
repository = "https://github.com/rogu3bear/mplora"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
blake3 = "1.5"
ed25519-dalek = "2.0"
ring = "0.16"
thiserror = "1.0"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
schemars = "0.8"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
rusqlite = "0.31"
sqlx = { version = "0.8" , features = ["runtime-tokio-rustls" , "sqlite"] }
tracing = "0.1"
proptest = "1.4"
pyo3 = "0.22"
tokenizers = "0.19"
safetensors = "0.4"
memmap2 = "0.9"
parking_lot = "0.12"
tokio = { version = "1.35", features = ["full"] }
core-foundation = "0.9"
security-framework = { version = "2.11.1" , features = ["OSX_10_13"] }
argon2 = { version = "0.5" , features = ["std"] }
cocoa = "0.25"
metal = "0.28"
objc = "0.2"
zeroize = "1.8"
tower = "0.4"
tower-http = "0.5"
clap = { version = "4.5" , features = ["derive"] }
serde_cbor = "0.11"
base64 = "0.22"
hex = "0.4"
futures = "0.3"
tempfile = "3.13"
walkdir = "2.5"
crossbeam = "0.8"
nix = "0.28"
futures-util = "0.3"
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
prometheus = "0.13"
bytemuck = { version = "1.14" , features = ["derive"] }
serde_derive = "1.0"
smallvec = "1.11"
hnsw_rs = "0.3"
async-stream = "0.3"
comfy-table = "7.1"
hostname = "0.3"
refinery = "0.8"
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3" , features = ["env-filter" , "json"] }
tantivy = "0.22"
reqwest = { version = "0.12" , features = ["json"] }
sysinfo = "0.30"
zstd = "0.13"
tar = "0.4"
uuid = { version = "1.6", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
