[package]
name = "mplora-fuzz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Dependencies from main workspace for fuzzing
adapteros-core = { path = "../crates/adapteros-core" }
adapteros-manifest = { path = "../crates/adapteros-manifest" }
adapteros-sbom = { path = "../crates/adapteros-sbom" }
adapteros-policy = { path = "../crates/adapteros-policy" }
adapteros-lora-router = { path = "../crates/adapteros-lora-router" }
adapteros-db = { path = "../crates/adapteros-db" }
adapteros-lora-worker = { path = "../crates/adapteros-lora-worker" }
adapteros-api-types = { path = "../crates/adapteros-api-types" }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
rand = { workspace = true }
rand_chacha = { version = "0.3" }
blake3 = { workspace = true }

[[bin]]
name = "manifest_parse"
path = "fuzz_targets/manifest_parse.rs"
test = false
doc = false

[[bin]]
name = "sbom_parse"
path = "fuzz_targets/sbom_parse.rs"
test = false
doc = false

[[bin]]
name = "policy_parse"
path = "fuzz_targets/policy_parse.rs"
test = false
doc = false

[[bin]]
name = "adapter_name_parse"
path = "fuzz_targets/adapter_name_parse.rs"
test = false
doc = false

[[bin]]
name = "stack_name_parse"
path = "fuzz_targets/stack_name_parse.rs"
test = false
doc = false

[[bin]]
name = "router_inputs"
path = "fuzz_targets/router_inputs.rs"
test = false
doc = false

[[bin]]
name = "router_route_with_adapter_info"
path = "fuzz_targets/router_route_with_adapter_info.rs"
test = false
doc = false

[[bin]]
name = "trace_encoding"
path = "fuzz_targets/trace_encoding.rs"
test = false
doc = false

[[bin]]
name = "receipt_verification"
path = "fuzz_targets/receipt_verification.rs"
test = false
doc = false

[[bin]]
name = "evidence_envelope"
path = "fuzz_targets/evidence_envelope.rs"
test = false
doc = false

[[bin]]
name = "evidence_chain_verification"
path = "fuzz_targets/evidence_chain_verification.rs"
test = false
doc = false

[[bin]]
name = "stop_controller"
path = "fuzz_targets/stop_controller.rs"
test = false
doc = false

[[bin]]
name = "kv_quota_reservation"
path = "fuzz_targets/kv_quota_reservation.rs"
test = false
doc = false