[package]
name = "jkca-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
adapteros-core = { path = "../crates/adapteros-core" }
adapteros-lora-worker = { path = "../crates/adapteros-lora-worker" }
adapteros-single-file-adapter = { path = "../crates/adapteros-single-file-adapter" }
tokenizers = "0.15"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
